<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.bit</groupId>
		<artifactId>SpringBoot</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath/>
	</parent>

	<groupId>com.32bit</groupId>
	<artifactId>user_management_service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>user_management_service</name>
	<description>User Management Service</description>

	<properties>
		<java.version>17</java.version>
		<jacoco.version>0.8.11</jacoco.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.bit</groupId>
			<artifactId>auth-filter</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>com/bit/usermanagementservice/UserManagementServiceApplication.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/invalidemail/InvalidEmailExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/invalidname/InvalidNameExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/rolenotfound/RoleNotFoundExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/useralreadyactive/UserAlreadyActiveExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/useralreadydeleted/UserAlreadyDeletedExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/useralreadyexists/UserAlreadyExistsExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/usernotfound/UserNotFoundExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/atleastoneroleneeded/AtLeastOneRoleNeededExceptionHandler.class</exclude>
						<exclude>com/bit/usermanagementservice/exceptions/ErrorDetails.class</exclude>
						<exclude>com/bit/usermanagementservice/config/EmailConfig.class</exclude>
						<exclude>com/bit/usermanagementservice/config/KafkaProducerConfig.class</exclude>
						<exclude>com/bit/usermanagementservice/config/PasswordEncoderConfig.class</exclude>
						<exclude>com/bit/usermanagementservice/config/SecurityConfig.class</exclude>
						<exclude>com/bit/usermanagementservice/entity/User.class</exclude>
						<exclude>com/bit/usermanagementservice/entity/Role.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/kafka/UserCredentialsDTO.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/kafka/UserUpdateDTO.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/kafka/UserReactivateDTO.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/kafka/UserSafeDeletionDTO.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/updateuser/UpdateUserReq.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/adduser/AddUserReq.class</exclude>
						<exclude>com/bit/usermanagementservice/dto/getuser/UserDTO.class</exclude>

					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<outputDirectory>./target/jacoco-report</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.8</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
